--- a/System/test.html
+++ b/System/test.html
@@ -15,6 +15,48 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script>
+        function paginator(antall, index){
+
+            $("#jumbo").empty();
+            $("#jumbo").append('<ul class="pagination" id="navigator">');
+            index= parseInt(index,10);
+
+            var startPoint = (index-2)>0?index-2:1;
+            var i = 0;
+
+            if(index!=1) {
+                $("#navigator").append('<li><a href="#" id="' + (index - 1) + '"><span> &laquo; </span></a></li>');
+            }
+            while(startPoint<=antall && i<5){
+                if(startPoint==index){
+                    $("#navigator").append('<li class="active"><a href="#" >' + startPoint + '</a></li>');
+                }else {
+                    $("#navigator").append('<li><a href="#" id="'+startPoint+'">' + startPoint + '</a></li>');
+                }
+                startPoint++;
+                i++;
+
+            }
+
+            if(index!=antall) {
+                $("#navigator").append('<li><a href="#" id="' + (index + 1) + '"><span> &raquo; </span></a></li>');
+
+            }
+
+
+            $('#navigator li a').each(function(){
+                var id = $(this).attr('id');
+                $(this).click(function(){
+                    paginator(antall,id);
+                });
+            });
+
+
+        }
+
+    </script>
 </head>
 <body>
 
@@ -24,24 +66,16 @@
         <div class="row text-center">
 
 
-            <div class="jumbotron">
+            <div class="jumbotron" id="jumbo">
                     <h3>Hva er 1001 i binær tall?</h3>
                     <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-success">9</a>
                         <a href="#" class="list-group-item list-group-item-danger">7</a>
-                        <a href="#" class="list-group-item">6</a>
+                        <a href="#" class="list-group-item" onclick="paginator(25,20);">6</a>
                         <a href="#" class="list-group-item">4</a>
                     </div>
                     <div class="alert alert-info" role="alert">Vi ser her at første tallet er ....</div>
-                    <ul class="pagination pagination-lg">
-                        <li class="disabled"><a href="#">&laquo;</a></li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">&raquo;</a></li>
-                    </ul>
+
 
             </div>
 
